--- a/fit.org
+++ b/fit.org
@@ -1,12 +1,12 @@
 * FIT
 #+BEGIN: clocktable :maxlevel 2 :scope subtree
-#+CAPTION: Clock summary at [2016-08-18 Thu 20:04]
+#+CAPTION: Clock summary at [2016-08-24 Wed 18:41]
 | Headline      | Time    |       |
 |---------------+---------+-------|
-| *Total time*  | *20:50* |       |
+| *Total time*  | *22:00* |       |
 |---------------+---------+-------|
-| FIT           | 20:50   |       |
-| \emsp GYM     |         | 20:00 |
+| FIT           | 22:00   |       |
+| \emsp GYM     |         | 21:10 |
 | \emsp RUNNING |         |  0:50 |
 #+END:
 
@@ -264,6 +264,21 @@
  + 提铃上举 12*5
  + 哑铃弯举 12*4
  + 下压 12*5
+ + 卷腹 20*4
+
+*** <2016-08-24 Wed>
+    :LOGBOOK:
+    CLOCK: [2016-08-24 Wed 16:50]--[2016-08-24 Wed 18:00] =>  1:10
+    :END:
+去检查了肩膀之前的损伤，医生说没有大碍。
+休息了一周，以后对肩部的训练要多加注意。同时长期观察恢复情况。
+胸背
+ + 上斜卧推 12*4
+ + 杠铃划船 12*4
+ + 引体向上 6*6
+ + 平板卧推 12/10/8/8
+ + 直腿硬拉 12/10*3
+ + 哑铃飞鸟 10*3
  + 卷腹 20*4
 
 ** RUNNING
