--- a/fit.org
+++ b/fit.org
@@ -1,12 +1,12 @@
 * FIT
 #+BEGIN: clocktable :maxlevel 2 :scope subtree
-#+CAPTION: Clock summary at [2016-08-25 Thu 22:58]
+#+CAPTION: Clock summary at [2016-09-02 Fri 18:29]
 | Headline      | Time    |       |
 |---------------+---------+-------|
-| *Total time*  | *22:30* |       |
+| *Total time*  | *25:40* |       |
 |---------------+---------+-------|
-| FIT           | 22:30   |       |
-| \emsp GYM     |         | 21:10 |
+| FIT           | 25:40   |       |
+| \emsp GYM     |         | 24:20 |
 | \emsp RUNNING |         |  1:20 |
 #+END:
 
@@ -279,6 +279,44 @@
  + 平板卧推 12/10/8/8
  + 直腿硬拉 12/10*3
  + 哑铃飞鸟 10*3
+ + 卷腹 20*4
+
+*** <2016-08-28 Sun>
+    :LOGBOOK:
+    CLOCK: [2016-08-28 Sun 17:05]--[2016-08-28 Sun 18:10] =>  1:05
+    :END:
+肩臂
+ + 颈后推举 12/12/12/10/10
+ + 哑铃前中后平举 12/12/15*4
+ + 提铃上举 12*4
+ + 哑铃弯举 12*4
+ + 下压 12*4
+ + 拉力器侧拉 12*3
+ + 卷腹 20*4
+
+*** <2016-08-31 Wed>
+    :LOGBOOK:
+    CLOCK: [2016-08-31 Wed 16:40]--[2016-08-31 Wed 17:45] =>  1:05
+    :END:
+胸背。状态不太好，不兴奋。最近休息的不太好。
+ + 上斜卧推 12*4
+ + 杠铃划船 12*4
+ + 引体向上 6*2 5*4 4*1
+ + 平板卧推 12/10/8/8
+ + 哑铃飞鸟 12*4
+ + 卷腹 20*4
+
+*** <2016-09-02 Fri>
+    :LOGBOOK:
+    CLOCK: [2016-09-02 Fri 15:50]--[2016-09-02 Fri 16:50] =>  1:00
+    :END:
+肩臂
+ + 颈后推举 12/12/12/10/10
+ + 哑铃前中后平举 12/12/15*4
+ + 提铃上举 12*4
+ + 哑铃弯举 12*4
+ + 下压 12*4
+ + 拉力器侧拉 12/12/20
  + 卷腹 20*4
 
 ** RUNNING
