--- a/fit.org
+++ b/fit.org
@@ -319,6 +319,27 @@
  + 拉力器侧拉 12/12/20
  + 卷腹 20*4
 
+*** <2016-09-06 Tue>
+    :LOGBOOK:
+    CLOCK: [2016-09-06 Tue 22:40]--[2016-09-06 Tue 23:05] =>  0:25
+    :END:
+胸背。第一天到SD。
+ + 上斜卧推 12*4
+ + 引体向上 5*6
+ + 划船 12*4
+ + 卷腹 20*4
+
+*** <2016-09-08 Thu>
+    :LOGBOOK:
+    CLOCK: [2016-09-08 Thu 21:00]--[2016-09-08 Thu 21:30] =>  0:30
+    :END:
+肩臂
+ + 哑铃推举 12*4
+ + 提铃上举 12*4
+ + 前中后平举 12/12/15*4
+ + 哑铃弯举 12*4
+ + 下压 12*4
+
 ** RUNNING
 *** <2016-07-22 Fri>
     :LOGBOOK:
