--- a/fit.org
+++ b/fit.org
@@ -1,12 +1,12 @@
 * FIT
 #+BEGIN: clocktable :maxlevel 2 :scope subtree
-#+CAPTION: Clock summary at [2016-09-02 Fri 18:29]
+#+CAPTION: Clock summary at [2016-09-11 Sun 23:41]
 | Headline      | Time    |       |
 |---------------+---------+-------|
-| *Total time*  | *25:40* |       |
+| *Total time*  | *27:35* |       |
 |---------------+---------+-------|
-| FIT           | 25:40   |       |
-| \emsp GYM     |         | 24:20 |
+| FIT           | 27:35   |       |
+| \emsp GYM     |         | 26:15 |
 | \emsp RUNNING |         |  1:20 |
 #+END:
 
@@ -340,6 +340,18 @@
  + 哑铃弯举 12*4
  + 下压 12*4
 
+*** <2016-09-11 Sun>
+    :LOGBOOK:
+    CLOCK: [2016-09-11 Sun 22:40]--[2016-09-11 Sun 23:40] =>  1:00
+    :END:
+胸背+跑步。
+ + 上斜卧推 12*4
+ + 平板卧推 12*4
+ + 引体向上 5*6
+ + 划船 12*4
+ + 卷腹 20*4
+ + 跑步10min，登山10min
+
 ** RUNNING
 *** <2016-07-22 Fri>
     :LOGBOOK:
@@ -357,3 +369,9 @@
     CLOCK: [2016-08-25 Thu 22:00]--[2016-08-25 Thu 22:30] =>  0:30
     :END:
 半小时 5km
+*** <2016-09-12 Mon>
+    :LOGBOOK:
+    CLOCK: [2016-09-12 Mon 22:00]--[2016-09-12 Mon 22:30] =>  0:30
+    :END:
+椭圆机 20min
+卷腹 20*4
