--- a/fit.org
+++ b/fit.org
@@ -1,13 +1,13 @@
 * FIT
 #+BEGIN: clocktable :maxlevel 2 :scope subtree
-#+CAPTION: Clock summary at [2016-09-11 Sun 23:41]
+#+CAPTION: Clock summary at [2016-09-16 Fri 00:35]
 | Headline      | Time    |       |
 |---------------+---------+-------|
-| *Total time*  | *27:35* |       |
+| *Total time*  | *28:50* |       |
 |---------------+---------+-------|
-| FIT           | 27:35   |       |
-| \emsp GYM     |         | 26:15 |
-| \emsp RUNNING |         |  1:20 |
+| FIT           | 28:50   |       |
+| \emsp GYM     |         | 27:00 |
+| \emsp RUNNING |         |  1:50 |
 #+END:
 
 ** GYM
@@ -351,6 +351,17 @@
  + 划船 12*4
  + 卷腹 20*4
  + 跑步10min，登山10min
+
+*** <2016-09-15 Thu>
+    :LOGBOOK:
+    CLOCK: [2016-09-15 Thu 23:00]--[2016-09-15 Thu 23:45] =>  0:45
+    :END:
+肩臂
+ + 哑铃推举 12*4
+ + 提铃上举 12*4
+ + 前中后平举 12/12/15*4
+ + 哑铃弯举 12*4
+ + 坐姿撑 12*4
 
 ** RUNNING
 *** <2016-07-22 Fri>
