--- a/fit.org
+++ b/fit.org
@@ -1,12 +1,12 @@
 * FIT
 #+BEGIN: clocktable :maxlevel 2 :scope subtree
-#+CAPTION: Clock summary at [2016-09-27 Tue 22:38]
+#+CAPTION: Clock summary at [2016-10-02 Sun 00:02]
 | Headline      | Time    |       |
 |---------------+---------+-------|
-| *Total time*  | *31:05* |       |
+| *Total time*  | *31:55* |       |
 |---------------+---------+-------|
-| FIT           | 31:05   |       |
-| \emsp GYM     |         | 28:55 |
+| FIT           | 31:55   |       |
+| \emsp GYM     |         | 29:45 |
 | \emsp RUNNING |         |  2:10 |
 #+END:
 
@@ -385,7 +385,6 @@
  + 引体向上 5*7
  + 跑步10min
  + 卷腹 25*4
-
 *** <2016-09-27 Tue>
     :LOGBOOK:
     CLOCK: [2016-09-27 Tue 22:05]--[2016-09-27 Tue 22:35] =>  0:30
@@ -397,6 +396,18 @@
  + 哑铃弯举 12*4
  + 后拉 12*4
  + 卷腹 25*3 抬腿20
+*** <2016-10-01 Sat>
+    :LOGBOOK:
+    CLOCK: [2016-10-01 Sat 22:45]--[2016-10-01 Sat 23:35] =>  0:50
+    :END:
+胸背+椭圆机。
+ + 上斜卧推 12*5
+ + 龙门架夹胸 15*4
+ + 划船 12*4
+ + 引体向上 6*6
+ + 椭圆机 10min
+ + 卷腹 25*2 举腿20*2
+
 ** RUNNING
 *** <2016-07-22 Fri>
     :LOGBOOK:
