--- a/fit.org
+++ b/fit.org
@@ -1,12 +1,12 @@
 * FIT
 #+BEGIN: clocktable :maxlevel 2 :scope subtree
-#+CAPTION: Clock summary at [2016-10-09 Sun 00:52]
+#+CAPTION: Clock summary at [2016-10-12 Wed 00:28]
 | Headline      | Time    |       |
 |---------------+---------+-------|
-| *Total time*  | *32:55* |       |
+| *Total time*  | *33:40* |       |
 |---------------+---------+-------|
-| FIT           | 32:55   |       |
-| \emsp GYM     |         | 30:25 |
+| FIT           | 33:40   |       |
+| \emsp GYM     |         | 31:10 |
 | \emsp RUNNING |         |  2:30 |
 #+END:
 
@@ -420,6 +420,17 @@
  + 俯卧撑 10 15 20
  + 卷腹 25*2 抬腿10
  + 椭圆机 10min
+*** <2016-10-11 Tue>
+    :LOGBOOK:
+    CLOCK: [2016-10-11 Tue 22:45]--[2016-10-11 Tue 23:30] =>  0:45
+    :END:
+胸背+椭圆机。
+ + 上斜卧推 12*4
+ + 龙门架夹胸 12*4
+ + 划船 12*4
+ + 引体向上 6*6
+ + 卷腹 25*3 举腿20
+
 ** RUNNING
 *** <2016-07-22 Fri>
     :LOGBOOK:
