--- a/fit.org
+++ b/fit.org
@@ -463,4 +463,9 @@
     :LOGBOOK:
     CLOCK: [2016-10-08 Sat 23:10]--[2016-10-08 Sat 23:30] =>  0:20
     :END:
-跑步 20min
+    跑步 20min
+*** <2016-10-12 Wed>
+    :LOGBOOK:
+    CLOCK: [2016-10-12 Wed 22:10]--[2016-10-12 Wed 22:30] =>  0:20
+    :END:
+    椭圆机 20min
