--- a/fit.org
+++ b/fit.org
@@ -1,13 +1,13 @@
 * FIT
 #+BEGIN: clocktable :maxlevel 2 :scope subtree
-#+CAPTION: Clock summary at [2016-10-12 Wed 00:28]
-| Headline      | Time    |       |
-|---------------+---------+-------|
-| *Total time*  | *33:40* |       |
-|---------------+---------+-------|
-| FIT           | 33:40   |       |
-| \emsp GYM     |         | 31:10 |
-| \emsp RUNNING |         |  2:30 |
+#+CAPTION: Clock summary at [2016-10-19 Wed 18:49]
+| Headline      | Time  |       |
+|---------------+-------+-------|
+| *Total time*    | *34:40* |       |
+|---------------+-------+-------|
+| FIT           | 34:40 |       |
+| \emsp GYM     |       | 31:50 |
+| \emsp RUNNING |       |  2:50 |
 #+END:
 
 ** GYM
@@ -431,6 +431,19 @@
  + 引体向上 6*6
  + 卷腹 25*3 举腿20
 
+*** <2016-10-19 Wed>
+    :LOGBOOK:
+    CLOCK: [2016-10-19 Wed 18:05]--[2016-10-19 Wed 18:45] =>  0:40
+    :END:
+肩臂
+ + 哑铃推举 12*4
+ + 侧平举 12*4
+ + 哑铃弯举 12*4
+ + 下压 12*4
+ + 引体 40
+ + 卷腹 25*2 抬腿20*2
+
+
 ** RUNNING
 *** <2016-07-22 Fri>
     :LOGBOOK:
@@ -464,8 +477,3 @@
     CLOCK: [2016-10-08 Sat 23:10]--[2016-10-08 Sat 23:30] =>  0:20
     :END:
     跑步 20min
-*** <2016-10-12 Wed>
-    :LOGBOOK:
-    CLOCK: [2016-10-12 Wed 22:10]--[2016-10-12 Wed 22:30] =>  0:20
-    :END:
-    椭圆机 20min
