--- a/fit.org
+++ b/fit.org
@@ -1,12 +1,12 @@
 * FIT
 #+BEGIN: clocktable :maxlevel 2 :scope subtree
-#+CAPTION: Clock summary at [2016-11-15 Tue 23:22]
+#+CAPTION: Clock summary at [2016-11-17 Thu 23:44]
 | Headline      | Time  |       |
 |---------------+-------+-------|
-| *Total time*    | *39:30* |       |
+| *Total time*    | *40:05* |       |
 |---------------+-------+-------|
-| FIT           | 39:30 |       |
-| \emsp GYM     |       | 34:05 |
+| FIT           | 40:05 |       |
+| \emsp GYM     |       | 34:40 |
 | \emsp Aerobic |       |  5:25 |
 #+END:
 
@@ -483,6 +483,19 @@
  + 平板卧推 12*3
  + 引体向上 38
  + 卷腹 25*2 抬腿25*2
+
+*** <2016-11-17 Thu>
+    :LOGBOOK:
+    CLOCK: [2016-11-17 Thu 22:05]--[2016-11-17 Thu 22:40] =>  0:35
+    :END:
+肩臂
+ + 哑铃推举 12*4
+ + 侧平举 12*4
+ + 后平举 15*4
+ + 哑铃弯举 12*4
+ + 下压 12*4
+ + 卷腹 25*4
+ + 椭圆机 10min
 
 ** Aerobic
 *** <2016-07-22 Fri>
