--- a/2017.org
+++ b/2017.org
@@ -26,3 +26,11 @@
  + 跑步 12min
  + 仰卧起坐 25 * 4
  + 引体向上 6
+
+*** <2017-01-22 Sun>
+    :LOGBOOK:
+    CLOCK: [2017-01-22 Sun 23:00]--[2017-01-22 Sun 23:30] =>  0:30
+    :END:
+ + 跑步 17min
+ + 仰卧起坐 25 * 4
+ + 引体向上 5
